After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726618 - Fix the file browser's "deleted" message bus signal
Fix the file browser's "deleted" message bus signal
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-18 09:46 UTC by Garrett Regier
Modified: 2015-02-18 16:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Bug 726618 - Fix the file browser's "deleted" message bus signal (8.45 KB, patch)
2014-03-18 09:52 UTC, Garrett Regier
committed Details | Review

Description Garrett Regier 2014-03-18 09:46:13 UTC
The file browser is emitting the "deleted" message bus signal when the GtkTreeModel's "row-deleted" signal is emitted. However, because it requires some of the row's data to properly emit the signal it is too late. The docs for "row-deleted" are very specific about this:

    "This should be called by models after a row has been removed. The location pointed to by path should be the location that the row previously was at. It may not be a valid location anymore."


To fix this a "before-row-deleted" signal should be emitted and connected to for the "deleted" message bus signal.
Comment 1 Garrett Regier 2014-03-18 09:52:56 UTC
Created attachment 272259 [details] [review]
Bug 726618 - Fix the file browser's "deleted" message bus signal

Tested with a modified git plugin and the "deleted" message bus signal now works properly.
Comment 2 jessevdk@gmail.com 2014-03-18 11:01:24 UTC
Review of attachment 272259 [details] [review]:

Ok, looks good. But if it breaks something else you get to keep the pieces :)
Comment 3 Garrett Regier 2014-11-01 23:16:54 UTC
Can we get this in early this cycle so we know if it breaks something?
Comment 4 Garrett Regier 2015-02-15 01:46:03 UTC
Any chance we can get this pushed, it fixes the current issue with the "deleted" signal giving invalid data. This also means that the git plugin doesn't grow the list of file nodes until you navigate in the browser.
Comment 5 Paolo Borelli 2015-02-16 20:37:38 UTC
Review of attachment 272259 [details] [review]:

Yes, let's push this
Comment 6 Garrett Regier 2015-02-18 16:34:37 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.