Fix the file browser's "deleted" message bus signal

Tested with a modified git plugin and the "deleted"
message bus signal now works properly.

https://bugzilla.gnome.org/show_bug.cgi?id=726618